--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -14,7 +14,6 @@
             - name
             - phoneNumber
             - contactType
-            - userId
           properties:
             name:
               description: "Contact's name"
@@ -37,14 +36,10 @@
               type: string
               example: "work"
               enum: ['work', 'home', 'personal']
-            userId:
-              description: "Contact's user id"
-              type: string
-              example: 65e4decdd286b30065d54af9
             photo:
               description: "Link to contact's photo"
               type: string
-              example: https://res.cloudinary.com/uqwgdu/image/upload/image.png
+              format: binary
 
   responses:
     '201':
