--- a/swagger/paths/contacts/{id}/patch.yaml
+++ b/swagger/paths/contacts/{id}/patch.yaml
@@ -39,14 +39,10 @@ requestBody:
               type: string
               example: "work"
               enum: ['work', 'home', 'personal']
-            userId:
-              description: "Contact's user id"
-              type: string
-              example: 65e4decdd286b30065d54af9
             photo:
               description: "Link to contact's photo"
               type: string
-              example: https://res.cloudinary.com/uqwgdu/image/upload/image.png
+              format: binary
 responses:
   200:
     description: Contact successfully updated
